@@ -1,3 +1,9 @@
+2007-10-23  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* Makefile.def (dependencies): Make configure-gdb depend on
+	all-intl.
+	* Makefile.in: Regenerated.
+
 2007-09-15  Alan Modra  <amodra@bigpond.net.au>
 
 	* configure.ac: Correct makeinfo version check.
